--- a/.cpl/Styles/Style.xaml
+++ b/.cpl/Styles/Style.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:ChmlFrp_Professional_Launcher" >
+                    xmlns:local="clr-namespace:ChmlFrp_Professional_Launcher">
 
     <Style x:Key="IconButtonsStyle" TargetType="{x:Type Button}">
         <Setter Property="Background" Value="Transparent" />
@@ -48,12 +48,8 @@
                         <Path Name="ico" Data="{TemplateBinding Content}" Fill="{TemplateBinding BorderBrush}" Height="{TemplateBinding Height}" Width="{TemplateBinding Width}" Stretch="Uniform" />
                     </Border>
                     <ControlTemplate.Triggers>
-                        <Trigger Property="IsPressed" Value="True">
-                            <Setter TargetName="ico" Property="Fill" Value="{DynamicResource WhiteColorLiglt}" />
-                        </Trigger>
-
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter TargetName="ico" Property="Fill" Value="LightGray" />
+                            <Setter TargetName="ico" Property="Fill" Value="LightSteelBlue" />
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
@@ -161,21 +157,20 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:CornerButten}">
-                    <Border x:Name="border" 
-                            Background="Transparent" 
-                            BorderThickness="1" 
-                            BorderBrush="{DynamicResource ThemeColor}" 
+                    <Border x:Name="border"
+                            Background="Transparent"
+                            BorderThickness="1"
+                            BorderBrush="{DynamicResource ThemeColor}"
                             CornerRadius="{TemplateBinding CornerRadius}">
-                        
-                        <TextBlock FontSize="{TemplateBinding FontSize}" 
-                                   x:Name="borderTextBlock" 
-                                   Foreground="{DynamicResource ThemeColor}" 
-                                   Text="{TemplateBinding Content}" 
-                                   HorizontalAlignment="Center" 
+
+                        <TextBlock FontSize="{TemplateBinding FontSize}"
+                                   x:Name="borderTextBlock"
+                                   Foreground="{DynamicResource ThemeColor}"
+                                   Text="{TemplateBinding Content}"
+                                   HorizontalAlignment="Center"
                                    VerticalAlignment="Center" />
-                        
                     </Border>
-                    
+
                     <ControlTemplate.Triggers>
 
                         <Trigger Property="IsSelected" Value="False">
@@ -193,15 +188,13 @@
                             <Setter TargetName="border" Property="Background" Value="#ADD8E6" />
                             <Setter TargetName="borderTextBlock" Property="Foreground" Value="{DynamicResource ThemeColor}" />
                         </MultiTrigger>
-                        
+
                         <MultiTrigger>
                             <MultiTrigger.Conditions>
                                 <Condition Property="IsMouseOver" Value="True" />
                                 <Condition Property="IsSelected" Value="False" />
-                                
                             </MultiTrigger.Conditions>
                         </MultiTrigger>
-                        
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
@@ -212,23 +205,23 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:TransparentIconRadioButton}">
-                    <Border x:Name="border" 
-                            Background="Transparent" 
+                    <Border x:Name="border"
+                            Background="Transparent"
                             CornerRadius="15">
-                        <StackPanel Orientation="Horizontal" 
+                        <StackPanel Orientation="Horizontal"
                                     VerticalAlignment="Center">
-                            <Path Data="{TemplateBinding Data}" 
+                            <Path Data="{TemplateBinding Data}"
                                   Height="50" Width="50"
                                   Stretch="Fill"
                                   x:Name="path"
                                   Fill="Gray" />
-                            <TextBlock FontSize="22" 
+                            <TextBlock FontSize="22"
                                        Margin="15,0,0,0"
-                                       x:Name="borderTextBlock" 
-                                       Foreground="Gray" 
+                                       x:Name="borderTextBlock"
+                                       Foreground="Gray"
                                        Text="{TemplateBinding Content}"
                                        VerticalAlignment="Center"
-                                       HorizontalAlignment="Center"/>
+                                       HorizontalAlignment="Center" />
                         </StackPanel>
                     </Border>
                     <ControlTemplate.Triggers>
@@ -250,9 +243,9 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:CornerTextBox}">
-                    <Border Background="Transparent" 
-                            BorderThickness="2" 
-                            BorderBrush="{DynamicResource ThemeColor}" 
+                    <Border Background="Transparent"
+                            BorderThickness="2"
+                            BorderBrush="{DynamicResource ThemeColor}"
                             CornerRadius="{TemplateBinding CornerRadius}">
                         <Grid>
                             <TextBox Text="{Binding Text, RelativeSource={RelativeSource TemplatedParent}, UpdateSourceTrigger=PropertyChanged}"
@@ -262,15 +255,15 @@
                                      Foreground="{DynamicResource ThemeColor}"
                                      FontSize="17"
                                      HorizontalContentAlignment="Left"
-                                     VerticalContentAlignment="Center"/>
+                                     VerticalContentAlignment="Center" />
 
-                            <TextBlock x:Name="borderTextBlock" 
+                            <TextBlock x:Name="borderTextBlock"
                                        Background="Transparent"
                                        FontSize="16"
-                                       Foreground="Gray" 
-                                       Text="{TemplateBinding Postscript}" 
+                                       Foreground="Gray"
+                                       Text="{TemplateBinding Postscript}"
                                        IsHitTestVisible="False"
-                                       HorizontalAlignment="Center" 
+                                       HorizontalAlignment="Center"
                                        VerticalAlignment="Center" />
                         </Grid>
                     </Border>
@@ -295,10 +288,10 @@
                     <Border x:Name="border" BorderBrush="Gray" BorderThickness="1" Background="Transparent" CornerRadius="{TemplateBinding CornerRadius}">
                         <Grid>
                             <!-- 下拉按钮 -->
-                            <ToggleButton Name="ToggleButton" 
-                                          Background="Transparent" 
+                            <ToggleButton Name="ToggleButton"
+                                          Background="Transparent"
                                           BorderBrush="Transparent"
-                                          Grid.Column="2" 
+                                          Grid.Column="2"
                                           Focusable="false"
                                           IsChecked="{Binding Path=IsDropDownOpen, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}"
                                           ClickMode="Press">
@@ -307,28 +300,25 @@
                                     <ControlTemplate TargetType="ToggleButton">
                                         <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="1" CornerRadius="4">
                                             <Path x:Name="path"
-                                                  Fill="{DynamicResource ThemeColor}" 
+                                                  Fill="{DynamicResource ThemeColor}"
                                                   Width="35" Height="35"
                                                   Stretch="Fill"
                                                   Data="M11.65 14.65q.15.15.35.15t.35-.15l2.8-2.8q.25-.25.125-.55T14.8 11H9.2q-.35 0-.475.3t.125.55zM12 22q-2.075 0-3.9-.788t-3.175-2.137T2.788 15.9T2 12t.788-3.9t2.137-3.175T8.1 2.788T12 2t3.9.788t3.175 2.137T21.213 8.1T22 12t-.788 3.9t-2.137 3.175t-3.175 2.138T12 22"
-                                                  HorizontalAlignment="Right" VerticalAlignment="Center"/>
-
+                                                  HorizontalAlignment="Right" VerticalAlignment="Center" />
                                         </Border>
 
                                         <ControlTemplate.Triggers>
 
                                             <Trigger Property="IsChecked" Value="True">
-                                                <Setter TargetName="path" Property="Data" Value="M11 11.8V15q0 .425.288.713T12 16t.713-.288T13 15v-3.2l.9.9q.275.275.7.275t.7-.275t.275-.7t-.275-.7l-2.6-2.6q-.3-.3-.7-.3t-.7.3l-2.6 2.6q-.275.275-.275.7t.275.7t.7.275t.7-.275zM12 22q-2.075 0-3.9-.788t-3.175-2.137T2.788 15.9T2 12t.788-3.9t2.137-3.175T8.1 2.788T12 2t3.9.788t3.175 2.137T21.213 8.1T22 12t-.788 3.9t-2.137 3.175t-3.175 2.138T12 22"/>
+                                                <Setter TargetName="path" Property="Data" Value="M11 11.8V15q0 .425.288.713T12 16t.713-.288T13 15v-3.2l.9.9q.275.275.7.275t.7-.275t.275-.7t-.275-.7l-2.6-2.6q-.3-.3-.7-.3t-.7.3l-2.6 2.6q-.275.275-.275.7t.275.7t.7.275t.7-.275zM12 22q-2.075 0-3.9-.788t-3.175-2.137T2.788 15.9T2 12t.788-3.9t2.137-3.175T8.1 2.788T12 2t3.9.788t3.175 2.137T21.213 8.1T22 12t-.788 3.9t-2.137 3.175t-3.175 2.138T12 22" />
                                             </Trigger>
                                         </ControlTemplate.Triggers>
-
                                     </ControlTemplate>
                                 </ToggleButton.Template>
-
                             </ToggleButton>
                             <!-- 文本框 -->
                             <ContentPresenter Name="ContentSite"
-                                              IsHitTestVisible="False" 
+                                              IsHitTestVisible="False"
                                               Content="{TemplateBinding SelectionBoxItem}"
                                               ContentTemplate="{TemplateBinding SelectionBoxItemTemplate}"
                                               ContentTemplateSelector="{TemplateBinding ItemTemplateSelector}"
@@ -344,7 +334,7 @@
                                 <Border Name="DropDownBorder"
                                         Background="#f9f9f9"
                                         Opacity="0.8"
-                                        CornerRadius="6,6,0,0" 
+                                        CornerRadius="6,6,0,0"
                                         Width="{TemplateBinding Width}"
                                         BorderThickness="1"
                                         BorderBrush="LightGray">
@@ -360,9 +350,7 @@
                         <Trigger Property="IsMouseOver" Value="True">
                             <Setter TargetName="border" Property="BorderBrush" Value="{DynamicResource ThemeColor}" />
                         </Trigger>
-
                     </ControlTemplate.Triggers>
-
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
@@ -374,13 +362,13 @@
                             <ControlTemplate TargetType="ComboBoxItem">
                                 <Border Background="#f9f9f9"
                                         x:Name="border"
-                                        CornerRadius="4" 
+                                        CornerRadius="4"
                                         Margin="4"
                                         Padding="8">
 
                                     <TextBlock Text="{TemplateBinding Content}"
                                                HorizontalAlignment="Center"
-                                               Foreground="Black"/>
+                                               Foreground="Black" />
                                 </Border>
                                 <ControlTemplate.Triggers>
 
@@ -391,13 +379,76 @@
                                     <Trigger Property="IsSelected" Value="True">
                                         <Setter TargetName="border" Property="Background" Value="{DynamicResource ThemeColor}" />
 
-                                        <Setter TargetName="border" Property="Opacity" Value="0.8"/>
+                                        <Setter TargetName="border" Property="Opacity" Value="0.8" />
                                     </Trigger>
                                 </ControlTemplate.Triggers>
                             </ControlTemplate>
                         </Setter.Value>
                     </Setter>
                 </Style>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style TargetType="local:CornerTunnelTextBox">
+        <Setter Property="IsTrue" Value="False" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="local:CornerTunnelTextBox">
+                    <StackPanel>
+                        <Border BorderThickness="0"
+                            CornerRadius="6"
+                            x:Name="border">
+                            <TextBox Text="{Binding Text, RelativeSource={RelativeSource TemplatedParent}, UpdateSourceTrigger=PropertyChanged}"
+                                     Padding="2"
+                                     BorderThickness="0"
+                                     Background="Transparent"
+                                     FontWeight="Bold"
+                                     IsReadOnly="True"
+                                     IsEnabled="False"
+                                     x:Name="text"
+                                     FontSize="17"
+                                     HorizontalContentAlignment="Center"
+                                     VerticalContentAlignment="Center" />
+                        </Border>
+                    </StackPanel>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsTrue" Value="True">
+                            <Setter TargetName="border" Property="Background" Value="GreenYellow" />
+                            <Setter TargetName="text" Property="Foreground" Value="RoyalBlue" />
+                            <Setter TargetName="text" Property="Text" Value="在线" />
+                        </Trigger>
+                        <Trigger Property="IsTrue" Value="False">
+                            <Setter TargetName="border" Property="Background" Value="Red" />
+                            <Setter TargetName="text" Property="Foreground" Value="Yellow" />
+                            <Setter TargetName="text" Property="Text" Value="离线" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style TargetType="local:CornerTextBlock">
+        <Setter Property="Foreground" Value="Black" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="local:CornerTextBlock">
+                    <StackPanel>
+                        <TextBox Text="{Binding Text, RelativeSource={RelativeSource TemplatedParent}, UpdateSourceTrigger=PropertyChanged}"
+                             Padding="2"
+                             BorderThickness="0"
+                             Background="Transparent"
+                             FontWeight="Bold"
+                             Foreground="{TemplateBinding Foreground}"
+                             IsReadOnly="True"
+                             IsEnabled="False"
+                             x:Name="text"
+                             FontSize="17"
+                             HorizontalContentAlignment="Center"
+                             VerticalContentAlignment="Center" />
+                    </StackPanel>
+                </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
