--- a/.cpl/App.xaml
+++ b/.cpl/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="ChmlFrp_Professional_Launcher.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="/MainWindow.xaml">
+             StartupUri="MainWindow.xaml">
 
     <Application.Resources>
         <ResourceDictionary>
