--- a/.cpl/MainWindow.xaml
+++ b/.cpl/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ChmlFrp_Professional_Launcher"
+        xmlns:styles="clr-namespace:ChmlFrp_Professional_Launcher.Styles"
         mc:Ignorable="d"
         Height="430"
         Width="780"
@@ -23,45 +23,45 @@
                 <RowDefinition />
             </Grid.RowDefinitions>
 
-            <Border  CornerRadius="6,6,0,0"
-                     Grid.Row="0"
-                     MouseLeftButtonDown="Border_MouseLeftButtonDown"
-                     Height="50"
-                     Background="{DynamicResource ThemeColor}">
+            <Border CornerRadius="6,6,0,0"
+                    Grid.Row="0"
+                    MouseLeftButtonDown="DragMoveThis"
+                    Height="50"
+                    Background="{DynamicResource ThemeColor}">
                 <Grid>
                     <Path Data="{DynamicResource logo}"
-                              Stretch="Fill"
-                              Fill="#CFE2F7"
-                              Margin="15,0,0,0"
-                              Width="35"
-                              Height="35"
-                              HorizontalAlignment="Left" />
+                          Stretch="Fill"
+                          Fill="{DynamicResource WhiteColorLight}"
+                          Margin="15,0,0,0"
+                          Width="35"
+                          Height="35"
+                          HorizontalAlignment="Left" />
 
                     <Grid>
                         <StackPanel HorizontalAlignment="Center"
                                     VerticalAlignment="Center"
                                     Orientation="Horizontal">
 
-                            <local:CornerIconRadioButton
-                                    IsChecked="True"
-                                    Margin="0,0,5,0"
-                                    Data="{DynamicResource home}"
-                                    Content="启动"
-                                    x:Name="LaunchPageButton"
-                                    Click="rdLaunchPage_Click" />
+                            <styles:CornerIconRadioButton
+                                IsChecked="True"
+                                Margin="0,0,5,0"
+                                Data="{DynamicResource home}"
+                                Content="启动"
+                                x:Name="LaunchPageButton"
+                                Click="NavigateLaunching" />
 
-                            <local:CornerIconRadioButton
-                                    Margin="0,0,5,0"
-                                    Content="登录"
-                                    Data="{DynamicResource login}"
-                                    x:Name="ChmlfrpPageButton"
-                                    Click="rdChmlfrpPage_Click" />
+                            <styles:CornerIconRadioButton
+                                Margin="0,0,5,0"
+                                Content="登录"
+                                Data="{DynamicResource login}"
+                                x:Name="ChmlfrpPageButton"
+                                Click="NavigateChmlfrpPage" />
 
-                            <local:CornerIconRadioButton
-                                    Content="设置"
-                                    Data="{DynamicResource Settings}"
-                                    x:Name="SettingsPageButton"
-                                    Click="rdSettingsPage_Click" />
+                            <styles:CornerIconRadioButton
+                                Content="设置"
+                                Data="{DynamicResource Settings}"
+                                x:Name="SettingsPageButton"
+                                Click="NavigateSettings" />
                         </StackPanel>
                     </Grid>
 
@@ -69,22 +69,16 @@
                                 Orientation="Horizontal"
                                 FlowDirection="RightToLeft">
 
-                        <Button x:Name="btnClose"
-                                Margin="15,0,0,0"
-                                Height="25"
-                                Width="25"
+                        <Button Margin="15,0,0,0"
                                 Style="{StaticResource IconButtonsStyle}"
                                 Content="{DynamicResource close}"
-                                Click="btnClose_Click"
+                                Click="CloseThis"
                                 Tag="IsCloseButton" />
 
-                        <Button x:Name="btnMinimize"
-                                Height="25"
-                                Margin="5,0,0,0"
-                                Width="25"
+                        <Button Margin="5,0,0,0"
                                 Style="{StaticResource IconButtonsStyle}"
                                 Content="{DynamicResource minimize}"
-                                Click="btnMinimize_Click" />
+                                Click="MinimizeThis" />
                     </StackPanel>
                 </Grid>
             </Border>
@@ -92,6 +86,7 @@
             <!--背景板-->
             <Grid Grid.Row="1">
                 <Border Background="#C7D7EE"
+                        x:Name="Border"
                         CornerRadius="0,0,6,6" />
 
                 <Border CornerRadius="0,0,5,5">
