--- a/.cpl/Pages/ChmlFrpPages/ChmlFrpHomePage.xaml
+++ b/.cpl/Pages/ChmlFrpPages/ChmlFrpHomePage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="ChmlFrp_Professional_Launcher.Pages.ChmlFrphomePage"
+﻿<Page x:Class="ChmlFrp_Professional_Launcher.Pages.ChmlFrpPages.ChmlFrphomePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -14,7 +14,7 @@
         </Grid.ColumnDefinitions>
         <Grid Grid.Column="0">
             <Border Opacity="0.8"
-                    Background="#f9f9f9"
+                    Background="{DynamicResource WhiteColorLight}"
                     CornerRadius="0,0,0,5" />
         </Grid>
         <StackPanel Grid.Column="0"
@@ -27,17 +27,16 @@
                          Click="rdLaunchPage_Click" />
 
             <RadioButton Tag="{DynamicResource TMA}"
-                    Click="rdTMA_Click"
-                    x:Name="rdTMA"
-                    FontWeight="Bold"
-                    Content="隧道管理"
-                    Style="{DynamicResource MenuRadioButtonStyle}" />
+                         Click="rdTMA_Click"
+                         x:Name="rdTMA"
+                         FontWeight="Bold"
+                         Content="隧道管理"
+                         Style="{DynamicResource MenuRadioButtonStyle}" />
         </StackPanel>
         <Grid Grid.Column="1">
             <Border CornerRadius="0,0,10,10">
                 <Frame x:Name="PagesNavigation"
-                       NavigationUIVisibility="Hidden">
-                </Frame>
+                       NavigationUIVisibility="Hidden" />
             </Border>
         </Grid>
     </Grid>
