--- a/.cpl/Pages/ChmlFrpPages/ChmlFrpLoginPage.xaml
+++ b/.cpl/Pages/ChmlFrpPages/ChmlFrpLoginPage.xaml
@@ -1,9 +1,10 @@
-﻿<Page x:Class="ChmlFrp_Professional_Launcher.Pages.ChmlFrpLoginPage"
+﻿<Page x:Class="ChmlFrp_Professional_Launcher.Pages.ChmlFrpPages.ChmlFrpLoginPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:ChmlFrp_Professional_Launcher"
+      xmlns:styles="clr-namespace:ChmlFrp_Professional_Launcher.Styles"
       mc:Ignorable="d"
       d:DesignHeight="430" d:DesignWidth="780">
 
@@ -12,38 +13,38 @@
                 Background="Black"
                 Opacity="0.4">
             <!--移动窗口的Border-->
-            <Border  CornerRadius="6,6,0,0"
-                     VerticalAlignment="Top"
-                     HorizontalAlignment="Center"
-                     MouseLeftButtonDown="Border_MouseLeftButtonDown"
-                     Width="780"
-                     Height="50"
-                     Background="Transparent" />
+            <Border CornerRadius="6,6,0,0"
+                    VerticalAlignment="Top"
+                    HorizontalAlignment="Center"
+                    MouseLeftButtonDown="Border_MouseLeftButtonDown"
+                    Width="780"
+                    Height="50"
+                    Background="Transparent" />
         </Border>
 
         <Border CornerRadius="6,6,6,6"
                 Height="225"
                 Width="425"
-                Background="#f9f9f9"
+                Background="{DynamicResource WhiteColorLight}"
                 VerticalAlignment="Center"
                 HorizontalAlignment="Center">
             <Grid>
 
                 <StackPanel Orientation="Vertical" VerticalAlignment="Center" Margin="0,20,0,0">
 
-                    <local:CornerTextBox CornerRadius="5"
-                                         x:Name="TextBox_Username"
-                                         Height="35"
-                                         Width="380"
-                                         Margin="0,-25,0,0"
-                                         Postscript="用户名或邮箱" />
+                    <styles:CornerTextBox CornerRadius="5"
+                                          x:Name="TextBox_Username"
+                                          Height="35"
+                                          Width="380"
+                                          Margin="0,-25,0,0"
+                                          Postscript="用户名或邮箱" />
 
-                    <local:CornerTextBox x:Name="TextBox_password"
-                                         CornerRadius="5"
-                                         Height="35"
-                                         Width="380"
-                                         Margin="0,5,0,0"
-                                         Postscript="密码" />
+                    <styles:CornerTextBox x:Name="TextBox_password"
+                                          CornerRadius="5"
+                                          Height="35"
+                                          Width="380"
+                                          Margin="0,5,0,0"
+                                          Postscript="密码" />
                 </StackPanel>
 
                 <StackPanel Orientation="Vertical">
@@ -66,35 +67,35 @@
                             HorizontalAlignment="Right"
                             Orientation="Horizontal">
 
-                    <local:CornerButten Margin="0,0,5,0"
-                                        FontSize="14"
-                                        CornerRadius="3"
-                                        Content="退出"
-                                        IsSelected="True"
-                                        Click="exit"
-                                        Height="35"
-                                        Width="60" />
+                    <styles:CornerButton Margin="0,0,5,0"
+                                         FontSize="14"
+                                         CornerRadius="3"
+                                         Content="退出"
+                                         IsSelected="True"
+                                         Click="Exit"
+                                         Height="35"
+                                         Width="60" />
 
-                    <local:CornerButten FontSize="14"
-                                        CornerRadius="3"
-                                        Content="登录"
-                                        IsSelected="True"
-                                        x:Name="logonButton"
-                                        Click="logon"
-                                        Height="35"
-                                        Width="60" />
+                    <styles:CornerButton FontSize="14"
+                                         CornerRadius="3"
+                                         Content="登录"
+                                         IsSelected="True"
+                                         x:Name="logonButton"
+                                         Click="Logon"
+                                         Height="35"
+                                         Width="60" />
                 </StackPanel>
 
-                <local:CornerButten VerticalAlignment="Bottom"
-                                    HorizontalAlignment="Left"
-                                    Margin="25,0,0,25"
-                                    FontSize="14"
-                                    CornerRadius="3"
-                                    Content="注册"
-                                    IsSelected="True"
-                                    Click="signup"
-                                    Height="35"
-                                    Width="60" />
+                <styles:CornerButton VerticalAlignment="Bottom"
+                                     HorizontalAlignment="Left"
+                                     Margin="25,0,0,25"
+                                     FontSize="14"
+                                     CornerRadius="3"
+                                     Content="注册"
+                                     IsSelected="True"
+                                     Click="Signup"
+                                     Height="35"
+                                     Width="60" />
             </Grid>
         </Border>
     </Grid>
