--- a/.cpl/Pages/ChmlFrpPages/ChmlFrpLoginedPages/HomePage.xaml
+++ b/.cpl/Pages/ChmlFrpPages/ChmlFrpLoginedPages/HomePage.xaml
@@ -1,9 +1,10 @@
-﻿<Page x:Class="ChmlFrp_Professional_Launcher.Pages.ChmlFrpLoginPages.HomePage"
+﻿<Page x:Class="ChmlFrp_Professional_Launcher.Pages.ChmlFrpPages.ChmlFrpLoginedPages.HomePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:local="clr-namespace:ChmlFrp_Professional_Launcher"
+      xmlns:styles="clr-namespace:ChmlFrp_Professional_Launcher.Styles"
       mc:Ignorable="d"
       d:DesignHeight="380"
       d:DesignWidth="650">
@@ -18,7 +19,8 @@
         </Style>
     </Page.Resources>
 
-    <Border Background="#f9f9f9" CornerRadius="6" Opacity="0.8" Height="270" Margin="5" VerticalAlignment="Top">
+    <Border Background="{DynamicResource WhiteColorLight}" CornerRadius="6" Opacity="0.8" Height="270" Margin="5"
+            VerticalAlignment="Top">
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="5*" />
@@ -27,22 +29,22 @@
 
             <Grid Grid.Column="0">
                 <Border Grid.Column="0"
-                Margin="5"
-                CornerRadius="6"
-                Background="#f9f9f9"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Top"
-                Opacity="0.9" />
-                <StackPanel Orientation="Vertical"
-                        HorizontalAlignment="Center"
+                        Margin="5"
+                        CornerRadius="6"
+                        Background="{DynamicResource WhiteColorLight}"
+                        HorizontalAlignment="Left"
                         VerticalAlignment="Top"
-                        Margin="5,5,0,0">
+                        Opacity="0.9" />
+                <StackPanel Orientation="Vertical"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Top"
+                            Margin="5,5,0,0">
                     <TextBlock VerticalAlignment="Top"
-                       FontSize="15"
-                       FontWeight="Black"
-                       HorizontalAlignment="Left"
-                       Margin="10"
-                       Text="账户详情" />
+                               FontSize="15"
+                               FontWeight="Black"
+                               HorizontalAlignment="Left"
+                               Margin="10"
+                               Text="账户详情" />
 
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
 
@@ -51,38 +53,38 @@
                             <TextBlock Text="邮箱" />
 
                             <Border CornerRadius="2,2,2,2"
-                            Background="{DynamicResource ThemeColor}"
-                            Width="120"
-                            Opacity="0.8"
-                            Height="4" />
+                                    Background="{DynamicResource ThemeColor}"
+                                    Width="120"
+                                    Opacity="0.8"
+                                    Height="4" />
 
                             <TextBlock x:Name="Usermailbox"
-                                   FontSize="12"
-                                   Text="我是擎天柱" />
+                                       FontSize="12"
+                                       Text="我是擎天柱" />
                         </StackPanel>
 
                         <StackPanel Orientation="Vertical" Margin="15,0,0,0">
                             <TextBlock Text="注册时间" />
 
                             <Border CornerRadius="2,2,2,2"
-                            Background="{DynamicResource ThemeColor}"
-                            Opacity="0.8"
-                            Width="120"
-                            Height="4" />
+                                    Background="{DynamicResource ThemeColor}"
+                                    Opacity="0.8"
+                                    Width="120"
+                                    Height="4" />
 
                             <TextBlock x:Name="UserRegistration_time"
-                               Text="我是擎天柱" />
+                                       Text="我是擎天柱" />
                         </StackPanel>
 
                         <StackPanel Orientation="Vertical" Margin="15,0,0,0">
                             <TextBlock Text="QQ" />
                             <Border CornerRadius="2,2,2,2"
-                            Background="{DynamicResource ThemeColor}"
-                                Opacity="0.8"
-                            Width="120"
-                            Height="4" />
+                                    Background="{DynamicResource ThemeColor}"
+                                    Opacity="0.8"
+                                    Width="120"
+                                    Height="4" />
                             <TextBlock x:Name="UserQQ"
-                               Text="我是擎天柱" />
+                                       Text="我是擎天柱" />
                         </StackPanel>
                     </StackPanel>
 
@@ -93,37 +95,37 @@
                             <TextBlock Text="权限组" />
 
                             <Border CornerRadius="2,2,2,2"
-                            Background="{DynamicResource ThemeColor}"
-                            Opacity="0.8"
-                            Width="120"
-                            Height="4" />
+                                    Background="{DynamicResource ThemeColor}"
+                                    Opacity="0.8"
+                                    Width="120"
+                                    Height="4" />
 
                             <TextBlock x:Name="Userright"
-                               Text="我是擎天柱" />
+                                       Text="我是擎天柱" />
                         </StackPanel>
 
                         <StackPanel Orientation="Vertical" Margin="15,0,0,0">
                             <TextBlock Text="到期时间" />
 
                             <Border CornerRadius="2,2,2,2"
-                            Background="{DynamicResource ThemeColor}"
-                            Opacity="0.8"
-                            Width="120"
-                            Height="4" />
+                                    Background="{DynamicResource ThemeColor}"
+                                    Opacity="0.8"
+                                    Width="120"
+                                    Height="4" />
 
                             <TextBlock x:Name="UserExpiration_time"
-                               Text="我是擎天柱" />
+                                       Text="我是擎天柱" />
                         </StackPanel>
 
                         <StackPanel Orientation="Vertical" Margin="15,0,0,0">
                             <TextBlock Text="实名状态" />
                             <Border CornerRadius="2,2,2,2"
-                            Background="{DynamicResource ThemeColor}"
-                            Opacity="0.8"
-                            Width="120"
-                            Height="4" />
+                                    Background="{DynamicResource ThemeColor}"
+                                    Opacity="0.8"
+                                    Width="120"
+                                    Height="4" />
                             <TextBlock x:Name="UserReal_name_status"
-                               Text="我是擎天柱" />
+                                       Text="我是擎天柱" />
                         </StackPanel>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" Margin="0,15,0,0" HorizontalAlignment="Center">
@@ -133,37 +135,37 @@
                             <TextBlock Text="剩余积分" />
 
                             <Border CornerRadius="2,2,2,2"
-                            Background="{DynamicResource ThemeColor}"
-                            Opacity="0.8"
-                            Width="120"
-                            Height="4" />
+                                    Background="{DynamicResource ThemeColor}"
+                                    Opacity="0.8"
+                                    Width="120"
+                                    Height="4" />
 
                             <TextBlock x:Name="UserPoints_remaining"
-                               Text="我是擎天柱" />
+                                       Text="我是擎天柱" />
                         </StackPanel>
 
                         <StackPanel Orientation="Vertical" Margin="15,0,0,0">
                             <TextBlock Text="隧道限制" />
 
                             <Border CornerRadius="2,2,2,2"
-                            Background="{DynamicResource ThemeColor}"
-                            Opacity="0.8"
-                            Width="120"
-                            Height="4" />
+                                    Background="{DynamicResource ThemeColor}"
+                                    Opacity="0.8"
+                                    Width="120"
+                                    Height="4" />
 
                             <TextBlock x:Name="UserTunnel_restrictions"
-                               Text="我是擎天柱" />
+                                       Text="我是擎天柱" />
                         </StackPanel>
 
                         <StackPanel Orientation="Vertical" Margin="15,0,0,0">
                             <TextBlock Text="带宽限制" />
                             <Border CornerRadius="2,2,2,2"
-                            Background="{DynamicResource ThemeColor}"
-                            Opacity="0.8"
-                            Width="120"
-                            Height="4" />
+                                    Background="{DynamicResource ThemeColor}"
+                                    Opacity="0.8"
+                                    Width="120"
+                                    Height="4" />
                             <TextBlock x:Name="UserBandwidth_throttling"
-                               Text="我是擎天柱" />
+                                       Text="我是擎天柱" />
                         </StackPanel>
                     </StackPanel>
                 </StackPanel>
@@ -173,23 +175,23 @@
 
                 <StackPanel Orientation="Vertical">
                     <Ellipse Margin="10,5,10,0"
-                         Height="150" Width="150">
+                             Height="150" Width="150">
                         <Ellipse.Fill>
                             <ImageBrush x:Name="UserImage"
-                                Stretch="UniformToFill" />
+                                        Stretch="UniformToFill" />
                         </Ellipse.Fill>
                     </Ellipse>
                     <TextBlock x:Name="UserTextBlock"
-                           FontSize="20" Text="Qyzgj" />
+                               FontSize="20" Text="Qyzgj" />
 
-                    <local:CornerButten x:Name="Token"
-                                    IsSelected="True"
-                                    Margin="25"
-                                    VerticalAlignment="Bottom"
-                                    Height="35"
-                                    CornerRadius="4"
-                                    Click="TokenClick"
-                                    Content="点击查看Token" />
+                    <styles:CornerButton x:Name="Token"
+                                         IsSelected="True"
+                                         Margin="25"
+                                         VerticalAlignment="Bottom"
+                                         Height="35"
+                                         CornerRadius="4"
+                                         Click="TokenClick"
+                                         Content="点击查看Token" />
                 </StackPanel>
             </Grid>
         </Grid>
