--- a/.cpl/Pages/ChmlFrpPages/ChmlFrpLoginedPages/TMAPage.xaml
+++ b/.cpl/Pages/ChmlFrpPages/ChmlFrpLoginedPages/TMAPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="ChmlFrp_Professional_Launcher.Pages.ChmlFrpLoginPages.TMAPage"
+﻿<Page x:Class="ChmlFrp_Professional_Launcher.Pages.ChmlFrpPages.ChmlFrpLoginedPages.TmaPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -14,16 +14,16 @@
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
             <Border Margin="5"
-                    Background="#f9f9f9"
+                    Background="{DynamicResource WhiteColorLight}"
                     Opacity="0.8"
                     CornerRadius="10">
                 <Grid>
                     <TextBlock FontSize="20"
-                            FontWeight="Bold"
-                            Text="隧道列表"
-                            Margin="15"
-                            HorizontalAlignment="Left"
-                            VerticalAlignment="Center" />
+                               FontWeight="Bold"
+                               Text="隧道列表"
+                               Margin="15"
+                               HorizontalAlignment="Left"
+                               VerticalAlignment="Center" />
                     <StackPanel Orientation="Horizontal"
                                 HorizontalAlignment="Right"
                                 VerticalAlignment="Center">
