--- a/.cpl/Pages/ReminderPages/Reminder_Download_Show.xaml
+++ b/.cpl/Pages/ReminderPages/Reminder_Download_Show.xaml
@@ -1,9 +1,10 @@
-﻿<Page x:Class="ChmlFrp_Professional_Launcher.Pages.Reminder_Download_Show"
+﻿<Page x:Class="ChmlFrp_Professional_Launcher.Pages.ReminderPages.ReminderDownloadShow"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:ChmlFrp_Professional_Launcher"
+      xmlns:styles="clr-namespace:ChmlFrp_Professional_Launcher.Styles"
       mc:Ignorable="d"
       d:DesignHeight="430" d:DesignWidth="780">
 
@@ -12,46 +13,46 @@
                 Background="Black"
                 Opacity="0.4">
             <!--移动窗口的Border-->
-            <Border  CornerRadius="6,6,0,0"
-                     VerticalAlignment="Top"
-                     HorizontalAlignment="Center"
-                     MouseLeftButtonDown="Border_MouseLeftButtonDown"
-                     Width="780"
-                     Height="50"
-                     Background="Transparent" />
+            <Border CornerRadius="6,6,0,0"
+                    VerticalAlignment="Top"
+                    HorizontalAlignment="Center"
+                    MouseLeftButtonDown="Border_MouseLeftButtonDown"
+                    Width="780"
+                    Height="50"
+                    Background="Transparent" />
         </Border>
 
         <Border CornerRadius="6"
                 Height="225"
                 Width="425"
-                Background="#f9f9f9"
+                Background="{DynamicResource WhiteColorLight}"
                 VerticalAlignment="Center"
                 HorizontalAlignment="Center">
             <Grid>
 
                 <StackPanel VerticalAlignment="Center"
-                HorizontalAlignment="Center"
-                Orientation="Horizontal">
+                            HorizontalAlignment="Center"
+                            Orientation="Horizontal">
 
-                    <local:TransparentIconRadioButton x:Name="X86_Butten"
-                          Content="X86"
-                          Data="{DynamicResource x86}"
-                          Height="50" Width="150" />
+                    <styles:TransparentIconRadioButton x:Name="X86_Butten"
+                                                       Content="X86"
+                                                       Data="{DynamicResource x86}"
+                                                       Height="50" Width="150" />
 
-                    <local:TransparentIconRadioButton x:Name="AMD_Butten"
-                          Content="AMD"
-                          Data="{DynamicResource amd}"
-                          Height="50" Width="150" />
+                    <styles:TransparentIconRadioButton x:Name="AMD_Butten"
+                                                       Content="AMD"
+                                                       Data="{DynamicResource amd}"
+                                                       Height="50" Width="150" />
                 </StackPanel>
                 <ProgressBar Height="10"
-                     Margin="0,0,0,5"
-                     x:Name="PorgressBar"
-                     IsIndeterminate="False"
-                     VerticalAlignment="Bottom"
-                     Orientation="Horizontal"
-                     Foreground="LightBlue"
-                     Background="Transparent"
-                     BorderBrush="Transparent" />
+                             Margin="0,0,0,5"
+                             x:Name="PorgressBar"
+                             IsIndeterminate="False"
+                             VerticalAlignment="Bottom"
+                             Orientation="Horizontal"
+                             Foreground="LightBlue"
+                             Background="Transparent"
+                             BorderBrush="Transparent" />
 
                 <StackPanel Orientation="Vertical">
                     <TextBlock x:Name="SubjectTextBlock"
@@ -72,14 +73,14 @@
                             HorizontalAlignment="Right"
                             Orientation="Horizontal">
 
-                    <local:CornerButten FontSize="14"
-                                        CornerRadius="3"
-                                        Content="下载"
-                                        IsSelected="True"
-                                        x:Name="Yes_Button"
-                                        Click="Download_Button_Click"
-                                        Height="35"
-                                        Width="60" />
+                    <styles:CornerButton FontSize="14"
+                                         CornerRadius="3"
+                                         Content="下载"
+                                         IsSelected="True"
+                                         x:Name="Yes_Button"
+                                         Click="Download_Button_Click"
+                                         Height="35"
+                                         Width="60" />
                 </StackPanel>
             </Grid>
         </Border>
