--- a/.cpl/Pages/ReminderPages/Reminder_Interface_Show.xaml
+++ b/.cpl/Pages/ReminderPages/Reminder_Interface_Show.xaml
@@ -1,9 +1,10 @@
-﻿<Page x:Class="ChmlFrp_Professional_Launcher.Pages.Reminder_Interface_Show"
+﻿<Page x:Class="ChmlFrp_Professional_Launcher.Pages.ReminderPages.ReminderInterfaceShow"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:ChmlFrp_Professional_Launcher"
+      xmlns:styles="clr-namespace:ChmlFrp_Professional_Launcher.Styles"
       mc:Ignorable="d"
       d:DesignHeight="430" d:DesignWidth="780"
       Title="RemindersPageTwo">
@@ -13,19 +14,18 @@
                 Background="Black"
                 Opacity="0.4">
             <!--移动窗口的Border-->
-            <Border  CornerRadius="6,6,0,0"
-                     VerticalAlignment="Top"
-                     HorizontalAlignment="Center"
-                     MouseLeftButtonDown="Border_MouseLeftButtonDown"
-                     Width="780"
-                     Height="50"
-                     Background="Transparent">
-            </Border>
+            <Border CornerRadius="6,6,0,0"
+                    VerticalAlignment="Top"
+                    HorizontalAlignment="Center"
+                    MouseLeftButtonDown="Border_MouseLeftButtonDown"
+                    Width="780"
+                    Height="50"
+                    Background="Transparent" />
         </Border>
         <Border CornerRadius="6,6,6,6"
                 Height="225"
                 Width="425"
-                Background="#f9f9f9"
+                Background="{DynamicResource WhiteColorLight}"
                 VerticalAlignment="Center"
                 HorizontalAlignment="Center">
             <Grid>
@@ -48,16 +48,16 @@
                              IsReadOnly="True"
                              BorderThickness="0" />
                 </StackPanel>
-                <local:CornerButten FontSize="14"
-                                    CornerRadius="3"
-                                    Content="确定"
-                                    x:Name="Yes_CornerButten"
-                                    BorderThickness="1"
-                                    IsSelected="True"
-                                    Width="55" Height="35"
-                                    Margin="0,0,25,25"
-                                    VerticalAlignment="Bottom"
-                                    HorizontalAlignment="Right" />
+                <styles:CornerButton FontSize="14"
+                                     CornerRadius="3"
+                                     Content="确定"
+                                     x:Name="Yes_CornerButten"
+                                     BorderThickness="1"
+                                     IsSelected="True"
+                                     Width="55" Height="35"
+                                     Margin="0,0,25,25"
+                                     VerticalAlignment="Bottom"
+                                     HorizontalAlignment="Right" />
             </Grid>
         </Border>
     </Grid>
