--- a/.cpl/Pages/SettingPages/SettingHomePage.xaml
+++ b/.cpl/Pages/SettingPages/SettingHomePage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="ChmlFrp_Professional_Launcher.Pages.SettingHomePage"
+﻿<Page x:Class="ChmlFrp_Professional_Launcher.Pages.SettingPages.SettingHomePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -8,6 +8,5 @@
       d:DesignWidth="780"
       Title="SettingHomePage">
 
-    <Grid>
-    </Grid>
+    <Grid />
 </Page>
