--- a/.cpl/Themes/Theme.xaml
+++ b/.cpl/Themes/Theme.xaml
@@ -1,5 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <SolidColorBrush x:Key="ThemeColor" Color="#116fce" />
-    <SolidColorBrush x:Key="WhiteColorLiglt" Color="#f3f3f3" />
+    <SolidColorBrush x:Key="WhiteColorLight" Color="#f9f9f9" />
 </ResourceDictionary>
