--- a/.cpl/App.xaml
+++ b/.cpl/App.xaml
@@ -1,6 +1,4 @@
-﻿<Application x:Class="ChmlFrp_Professional_Launcher.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+﻿<Application xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              StartupUri="MainWindow.xaml">
 
     <Application.Resources>
