--- a/.cpl/MainWindow.xaml
+++ b/.cpl/MainWindow.xaml
@@ -1,14 +1,9 @@
-﻿<Window x:Class="ChmlFrp_Professional_Launcher.MainWindow"
+﻿<Window x:Class="CPL.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:styles="clr-namespace:ChmlFrp_Professional_Launcher.Styles"
-        mc:Ignorable="d"
-        Height="430"
-        Width="780"
-        MinWidth="780"
-        MinHeight="430"
+        xmlns:styles="clr-namespace:CPL.Styles"
+        Height="430" Width="780"
+        MinWidth="780" MinHeight="430"
         WindowStartupLocation="CenterScreen"
         WindowStyle="None"
         AllowsTransparency="True"
@@ -42,43 +37,41 @@
                                     VerticalAlignment="Center"
                                     Orientation="Horizontal">
 
-                            <styles:CornerIconRadioButton
-                                IsChecked="True"
-                                Margin="0,0,5,0"
-                                Data="{DynamicResource home}"
-                                Content="启动"
-                                x:Name="LaunchPageButton"
-                                Click="NavigateLaunching" />
+                            <styles:CornerIconRadioButton IsChecked="True"
+                                                          Margin="0,0,5,0"
+                                                          Data="{DynamicResource home}"
+                                                          Content="启动"
+                                                          x:Name="LaunchPageButton"
+                                                          Click="NavigateLaunching" />
 
-                            <styles:CornerIconRadioButton
-                                Margin="0,0,5,0"
-                                Content="登录"
-                                Data="{DynamicResource login}"
-                                x:Name="ChmlfrpPageButton"
-                                Click="NavigateChmlfrpPage" />
+                            <styles:CornerIconRadioButton Margin="0,0,5,0"
+                                                          Content="登录"
+                                                          Data="{DynamicResource login}"
+                                                          x:Name="ChmlfrpPageButton"
+                                                          Click="NavigateChmlfrpPage" />
 
-                            <styles:CornerIconRadioButton
-                                Content="设置"
-                                Data="{DynamicResource Settings}"
-                                x:Name="SettingsPageButton"
-                                Click="NavigateSettings" />
+                            <styles:CornerIconRadioButton Content="设置"
+                                                          Data="{DynamicResource Settings}"
+                                                          x:Name="SettingsPageButton"
+                                                          Click="NavigateSettings" />
                         </StackPanel>
                     </Grid>
 
                     <StackPanel HorizontalAlignment="Right"
                                 Orientation="Horizontal"
-                                FlowDirection="RightToLeft">
+                                VerticalAlignment="Center">
 
-                        <Button Margin="15,0,0,0"
+                        <Button Margin="0,0,5,0"
+                                Style="{StaticResource IconButtonsStyle}"
+                                Content="{DynamicResource minimize}"
+                                Click="MinimizeThis" />
+
+                        <Button Margin="0,0,15,0"
                                 Style="{StaticResource IconButtonsStyle}"
                                 Content="{DynamicResource close}"
                                 Click="CloseThis"
                                 Tag="IsCloseButton" />
 
-                        <Button Margin="5,0,0,0"
-                                Style="{StaticResource IconButtonsStyle}"
-                                Content="{DynamicResource minimize}"
-                                Click="MinimizeThis" />
                     </StackPanel>
                 </Grid>
             </Border>
