--- a/.cpl/Pages/ChmlFrpPages/ChmlFrpHomePage.xaml
+++ b/.cpl/Pages/ChmlFrpPages/ChmlFrpHomePage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="ChmlFrp_Professional_Launcher.Pages.ChmlFrpPages.ChmlFrphomePage"
+﻿<Page x:Class="CPL.Pages.ChmlFrpPages.ChmlFrphomePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -28,7 +28,7 @@
 
             <RadioButton Tag="{DynamicResource TMA}"
                          Click="rdTMA_Click"
-                         x:Name="rdTMA"
+                         x:Name="RdTma"
                          FontWeight="Bold"
                          Content="隧道管理"
                          Style="{DynamicResource MenuRadioButtonStyle}" />
