--- a/.cpl/Pages/ChmlFrpPages/ChmlFrpLoginPage.xaml
+++ b/.cpl/Pages/ChmlFrpPages/ChmlFrpLoginPage.xaml
@@ -1,10 +1,9 @@
-﻿<Page x:Class="ChmlFrp_Professional_Launcher.Pages.ChmlFrpPages.ChmlFrpLoginPage"
+﻿<Page x:Class="CPL.Pages.ChmlFrpPages.ChmlFrpLoginPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="clr-namespace:ChmlFrp_Professional_Launcher"
-      xmlns:styles="clr-namespace:ChmlFrp_Professional_Launcher.Styles"
+      xmlns:styles="clr-namespace:CPL.Styles"
       mc:Ignorable="d"
       d:DesignHeight="430" d:DesignWidth="780">
 
@@ -33,13 +32,14 @@
                 <StackPanel Orientation="Vertical" VerticalAlignment="Center" Margin="0,20,0,0">
 
                     <styles:CornerTextBox CornerRadius="5"
-                                          x:Name="TextBox_Username"
+                                          x:Name="TextBoxUsername"
                                           Height="35"
                                           Width="380"
                                           Margin="0,-25,0,0"
                                           Postscript="用户名或邮箱" />
 
-                    <styles:CornerTextBox x:Name="TextBox_password"
+                    <styles:CornerTextBox x:Name="TextBoxPassword"
+                                          IsPassword="True"
                                           CornerRadius="5"
                                           Height="35"
                                           Width="380"
@@ -48,8 +48,7 @@
                 </StackPanel>
 
                 <StackPanel Orientation="Vertical">
-                    <TextBlock x:Name="SubjectTextBlock"
-                               FontSize="25"
+                    <TextBlock FontSize="25"
                                Text="登录CHMLFRP"
                                Foreground="#0B5BCB" Margin="20,20,0,0"
                                VerticalAlignment="Top"
@@ -80,7 +79,7 @@
                                          CornerRadius="3"
                                          Content="登录"
                                          IsSelected="True"
-                                         x:Name="logonButton"
+                                         x:Name="LogonButton"
                                          Click="Logon"
                                          Height="35"
                                          Width="60" />
