--- a/.cpl/Pages/ReminderPages/Reminder_Box_Show.xaml
+++ b/.cpl/Pages/ReminderPages/Reminder_Box_Show.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="ChmlFrp_Professional_Launcher.Pages.ReminderPages.ReminderBoxShow"
+﻿<Page x:Class="CPL.Pages.ReminderPages.ReminderBoxShow"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
