--- a/.cpl/Pages/ReminderPages/Reminder_Download_Show.xaml
+++ b/.cpl/Pages/ReminderPages/Reminder_Download_Show.xaml
@@ -1,10 +1,9 @@
-﻿<Page x:Class="ChmlFrp_Professional_Launcher.Pages.ReminderPages.ReminderDownloadShow"
+﻿<Page x:Class="CPL.Pages.ReminderPages.ReminderDownloadShow"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="clr-namespace:ChmlFrp_Professional_Launcher"
-      xmlns:styles="clr-namespace:ChmlFrp_Professional_Launcher.Styles"
+      xmlns:styles="clr-namespace:CPL.Styles"
       mc:Ignorable="d"
       d:DesignHeight="430" d:DesignWidth="780">
 
@@ -34,12 +33,12 @@
                             HorizontalAlignment="Center"
                             Orientation="Horizontal">
 
-                    <styles:TransparentIconRadioButton x:Name="X86_Butten"
+                    <styles:TransparentIconRadioButton x:Name="X86Butten"
                                                        Content="X86"
                                                        Data="{DynamicResource x86}"
                                                        Height="50" Width="150" />
 
-                    <styles:TransparentIconRadioButton x:Name="AMD_Butten"
+                    <styles:TransparentIconRadioButton x:Name="AmdButten"
                                                        Content="AMD"
                                                        Data="{DynamicResource amd}"
                                                        Height="50" Width="150" />
@@ -55,9 +54,8 @@
                              BorderBrush="Transparent" />
 
                 <StackPanel Orientation="Vertical">
-                    <TextBlock x:Name="SubjectTextBlock"
-                               FontSize="25"
-                               Text="下载FRPC路径"
+                    <TextBlock FontSize="25"
+                               Text="下载FRPC类型"
                                Foreground="#0B5BCB" Margin="20,20,0,0"
                                VerticalAlignment="Top"
                                HorizontalAlignment="Left" />
@@ -77,7 +75,6 @@
                                          CornerRadius="3"
                                          Content="下载"
                                          IsSelected="True"
-                                         x:Name="Yes_Button"
                                          Click="Download_Button_Click"
                                          Height="35"
                                          Width="60" />
