--- a/.cpl/Pages/ReminderPages/Reminder_Interface_Show.xaml
+++ b/.cpl/Pages/ReminderPages/Reminder_Interface_Show.xaml
@@ -1,10 +1,9 @@
-﻿<Page x:Class="ChmlFrp_Professional_Launcher.Pages.ReminderPages.ReminderInterfaceShow"
+﻿<Page x:Class="CPL.Pages.ReminderPages.ReminderInterfaceShow"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="clr-namespace:ChmlFrp_Professional_Launcher"
-      xmlns:styles="clr-namespace:ChmlFrp_Professional_Launcher.Styles"
+      xmlns:styles="clr-namespace:CPL.Styles"
       mc:Ignorable="d"
       d:DesignHeight="430" d:DesignWidth="780"
       Title="RemindersPageTwo">
@@ -51,7 +50,7 @@
                 <styles:CornerButton FontSize="14"
                                      CornerRadius="3"
                                      Content="确定"
-                                     x:Name="Yes_CornerButten"
+                                     x:Name="YesCornerButten"
                                      BorderThickness="1"
                                      IsSelected="True"
                                      Width="55" Height="35"
