--- a/.cpl/Pages/StartWindow.xaml
+++ b/.cpl/Pages/StartWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ChmlFrp_Professional_Launcher.Pages.StartWindow"
+﻿<Window x:Class="CPL.Pages.StartWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
