--- a/.cat/Pages/ChmlFrpPages/ChmlFrpLoginedPages/HomePage.xaml
+++ b/.cat/Pages/ChmlFrpPages/ChmlFrpLoginedPages/HomePage.xaml
@@ -1,12 +1,7 @@
 ﻿<Page x:Class="CPL.Pages.ChmlFrpPages.ChmlFrpLoginedPages.HomePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:styles="clr-namespace:CPL.Styles"
-      mc:Ignorable="d"
-      d:DesignHeight="380"
-      d:DesignWidth="650">
+      xmlns:styles="clr-namespace:CPL.Styles">
 
     <Page.Resources>
         <Style TargetType="TextBlock">
