--- a/.cat/Pages/ChmlFrpPages/ChmlFrpLoginedPages/TMAPage.xaml
+++ b/.cat/Pages/ChmlFrpPages/ChmlFrpLoginedPages/TMAPage.xaml
@@ -1,12 +1,7 @@
 ﻿<Page x:Class="CPL.Pages.ChmlFrpPages.ChmlFrpLoginedPages.TmaPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:styles="clr-namespace:CPL.Styles"
-      mc:Ignorable="d"
-      d:DesignHeight="430"
-      d:DesignWidth="620">
+      xmlns:styles="clr-namespace:CPL.Styles">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -38,7 +33,7 @@
                                              Content="下一页"
                                              Click="btnNext_Click" />
                     </StackPanel>
-                    
+
                     <StackPanel Orientation="Horizontal"
                                 HorizontalAlignment="Right"
                                 VerticalAlignment="Center">
@@ -46,14 +41,14 @@
                         <Button Margin="0,0,5,0"
                                 BorderBrush="{DynamicResource ThemeColor}"
                                 Style="{StaticResource IconButtonsStyletwo}"
-                                Content="{DynamicResource add}"
+                                Content="{DynamicResource Add}"
                                 Width="40" Height="40"
                                 Click="btnAdd_Click" />
 
                         <Button Margin="0,0,25,0"
                                 BorderBrush="{DynamicResource ThemeColor}"
                                 Style="{StaticResource IconButtonsStyletwo}"
-                                Content="{DynamicResource refresh}"
+                                Content="{DynamicResource Refresh}"
                                 Width="40" Height="40"
                                 Click="btnRefresh_Click" />
                     </StackPanel>
