--- a/.cat/Pages/ReminderPages/Reminder_Box_Show.xaml
+++ b/.cat/Pages/ReminderPages/Reminder_Box_Show.xaml
@@ -1,11 +1,6 @@
 ﻿<Page x:Class="CPL.Pages.ReminderPages.ReminderBoxShow"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      mc:Ignorable="d"
-      d:DesignHeight="430"
-      d:DesignWidth="780">
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Grid>
         <Border x:Name="RemindersBorder"
