--- a/.cat/Pages/ReminderPages/Reminder_Download_Show.xaml
+++ b/.cat/Pages/ReminderPages/Reminder_Download_Show.xaml
@@ -1,11 +1,7 @@
 ﻿<Page x:Class="CPL.Pages.ReminderPages.ReminderDownloadShow"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:styles="clr-namespace:CPL.Styles"
-      mc:Ignorable="d"
-      d:DesignHeight="430" d:DesignWidth="780">
+      xmlns:styles="clr-namespace:CPL.Styles">
 
     <Grid>
         <Border CornerRadius="6,6,6,6"
@@ -35,12 +31,12 @@
 
                     <styles:TransparentIconRadioButton x:Name="X86Butten"
                                                        Content="X86"
-                                                       Data="{DynamicResource x86}"
+                                                       Data="{DynamicResource X86}"
                                                        Height="50" Width="150" />
 
                     <styles:TransparentIconRadioButton x:Name="AmdButten"
                                                        Content="AMD"
-                                                       Data="{DynamicResource amd}"
+                                                       Data="{DynamicResource Amd}"
                                                        Height="50" Width="150" />
                 </StackPanel>
                 <ProgressBar Height="10"
