--- a/.cat/Pages/ReminderPages/Reminder_Interface_Show.xaml
+++ b/.cat/Pages/ReminderPages/Reminder_Interface_Show.xaml
@@ -1,12 +1,7 @@
 ﻿<Page x:Class="CPL.Pages.ReminderPages.ReminderInterfaceShow"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:styles="clr-namespace:CPL.Styles"
-      mc:Ignorable="d"
-      d:DesignHeight="430" d:DesignWidth="780"
-      Title="RemindersPageTwo">
+      xmlns:styles="clr-namespace:CPL.Styles">
 
     <Grid>
         <Border CornerRadius="6,6,6,6"
