--- a/.cat/Pages/StartWindow.xaml
+++ b/.cat/Pages/StartWindow.xaml
@@ -1,9 +1,6 @@
 ﻿<Window x:Class="CPL.Pages.StartWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
         WindowStyle="None"
         Background="Transparent"
@@ -12,5 +9,5 @@
         AllowsTransparency="True"
         ResizeMode="NoResize"
         WindowState="Normal">
-    <Path Data="{DynamicResource logo}" Fill="{DynamicResource ThemeColor}" Stretch="Fill" />
+    <Path Data="{DynamicResource Logo}" Fill="{DynamicResource ThemeColor}" Stretch="Fill" />
 </Window>
