--- a/.cat/Styles/Style.xaml
+++ b/.cat/Styles/Style.xaml
@@ -475,4 +475,27 @@
             </Setter.Value>
         </Setter>
     </Style>
+    
+    <Style TargetType="styles:UserCard">
+        <Setter Property="Text" Value="我是擎天柱"/>
+        <Setter Property="FontSize" Value="15"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="styles:UserCard">
+                    <StackPanel Orientation="Vertical">
+                        <TextBlock FontSize="15" HorizontalAlignment="Center" Text="{TemplateBinding Tag}" />
+
+                        <Border CornerRadius="2"
+                                Background="{DynamicResource ThemeColor}"
+                                Margin="0,10,0,10"
+                                Opacity="0.8"
+                                Width="120"
+                                Height="4" />
+
+                        <TextBlock FontSize="{TemplateBinding FontSize}" HorizontalAlignment="Center" Text="{TemplateBinding Text}" />
+                    </StackPanel>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
