--- a/.cat/MainWindow.xaml
+++ b/.cat/MainWindow.xaml
@@ -1,7 +1,7 @@
-﻿<Window x:Class="CPL.MainWindow"
+﻿<Window x:Class="CAT.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:styles="clr-namespace:CPL.Styles"
+        xmlns:styles="clr-namespace:CAT.Styles"
         Height="430" Width="780"
         MinWidth="780" MinHeight="430"
         WindowStartupLocation="CenterScreen"
@@ -53,7 +53,6 @@
 
                             <styles:CornerIconRadioButton Content="设置"
                                                           Data="{DynamicResource Settings}"
-                                                          x:Name="SettingsPageButton"
                                                           Click="NavigateSettings" />
                         </StackPanel>
                     </Grid>
