--- a/.cat/Pages/BlankPage.xaml
+++ b/.cat/Pages/BlankPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="CPL.Pages.BlankPage"
+﻿<Page x:Class="CAT.Pages.BlankPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
