--- a/.cat/Pages/ChmlFrpPages/ChmlFrpHomePage.xaml
+++ b/.cat/Pages/ChmlFrpPages/ChmlFrpHomePage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="CPL.Pages.ChmlFrpPages.ChmlFrpHomePage"
+﻿<Page x:Class="CAT.Pages.ChmlFrpPages.ChmlFrpHomePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
