--- a/.cat/Pages/ChmlFrpPages/ChmlFrpLoginedPages/TMAPage.xaml
+++ b/.cat/Pages/ChmlFrpPages/ChmlFrpLoginedPages/TMAPage.xaml
@@ -1,7 +1,7 @@
-﻿<Page x:Class="CPL.Pages.ChmlFrpPages.ChmlFrpLoginedPages.TmaPage"
+﻿<Page x:Class="CAT.Pages.ChmlFrpPages.ChmlFrpLoginedPages.TmaPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:styles="clr-namespace:CPL.Styles">
+      xmlns:styles="clr-namespace:CAT.Styles">
 
     <Grid>
         <Grid.RowDefinitions>
