--- a/.cat/Pages/LaunchPages/LaunchPage.xaml
+++ b/.cat/Pages/LaunchPages/LaunchPage.xaml
@@ -1,9 +1,9 @@
-﻿<Page x:Class="CPL.Pages.LaunchPages.LaunchPage"
+﻿<Page x:Class="CAT.Pages.LaunchPages.LaunchPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:styles="clr-namespace:CPL.Styles"
+      xmlns:styles="clr-namespace:CAT.Styles"
       mc:Ignorable="d"
       d:DesignHeight="430"
       d:DesignWidth="780"
@@ -14,30 +14,42 @@
             <ColumnDefinition Width="6*" />
             <ColumnDefinition Width="5*" />
         </Grid.ColumnDefinitions>
+
+        <Border Opacity="0.8"
+                Margin="20"
+                Background="{DynamicResource WhiteColorLight}"
+                CornerRadius="6"
+                x:Name="PluginBorder"
+                Visibility="Collapsed">
+            <Grid x:Name="PluginGrid" />
+        </Border>
+
         <Border Opacity="0.8"
                 Grid.Column="1"
                 Background="{DynamicResource WhiteColorLight}"
                 CornerRadius="0,0,6,0">
-            <StackPanel Margin="0,0,0,35"
-                        HorizontalAlignment="Center"
-                        Width="300"
-                        VerticalAlignment="Bottom"
-                        Orientation="Vertical">
+            <Grid>
+                <StackPanel Margin="0,0,0,45"
+                            HorizontalAlignment="Center"
+                            Width="300"
+                            VerticalAlignment="Bottom"
+                            Orientation="Vertical">
 
-                <styles:CornerButton IsSelected="True"
-                                     CornerRadius="6,6,0,0"
-                                     Height="50"
-                                     FontSize="15"
-                                     Content="启动FRPC"
-                                     x:Name="LaunchButton"
-                                     Click="Launch" />
+                    <styles:CornerButton IsSelected="True"
+                                         CornerRadius="6,6,0,0"
+                                         Height="45"
+                                         FontSize="16"
+                                         Content="启动FRPC"
+                                         x:Name="LaunchButton"
+                                         Click="Launch" />
 
-                <styles:CornerComboBox x:Name="ComboBox"
-                                       Height="40"
-                                       FontSize="12"
-                                       Foreground="{DynamicResource ThemeColor}"
-                                       CornerRadius="0,0,6,6" />
-            </StackPanel>
+                    <styles:CornerComboBox x:Name="ComboBox"
+                                           Height="35"
+                                           FontSize="13"
+                                           Foreground="{DynamicResource ThemeColor}"
+                                           CornerRadius="0,0,6,6" />
+                </StackPanel>
+            </Grid>
         </Border>
     </Grid>
 </Page>
