--- a/.cat/Pages/ReminderPages/Reminder_Box_Show.xaml
+++ b/.cat/Pages/ReminderPages/Reminder_Box_Show.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="CPL.Pages.ReminderPages.ReminderBoxShow"
+﻿<Page x:Class="CAT.Pages.ReminderPages.ReminderBoxShow"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
@@ -19,8 +19,7 @@
                      Text="我是擎天柱"
                      VerticalAlignment="Center"
                      IsReadOnly="True"
-                     IsHitTestVisible="False"
-                     FontFamily="Segoe UI" />
+                     IsHitTestVisible="False" />
         </Border>
     </Grid>
 </Page>
