--- a/.cat/Pages/SettingPages/SettingHomePage.xaml
+++ b/.cat/Pages/SettingPages/SettingHomePage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="CPL.Pages.SettingPages.SettingHomePage"
+﻿<Page x:Class="CAT.Pages.SettingPages.SettingHomePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
@@ -17,12 +17,12 @@
                     Orientation="Vertical">
             <RadioButton IsChecked="True"
                          Content="个性化"
-                         Click="ButtonBase_OnClick"
+                         Click="NavigatePersonalizationPageClick"
                          Style="{DynamicResource MenuRadioButtonStyle}"
                          Tag="{DynamicResource Customize}" />
 
-            <RadioButton Content="关于与鸣谢"
-                         Click="ButtonBase_OnClick"
+            <RadioButton Content="关于页"
+                         Click="NavigateAboutMePageClick"
                          Style="{DynamicResource MenuRadioButtonStyle}"
                          Tag="{DynamicResource About}" />
         </StackPanel>
