--- a/.cat/Pages/StartWindow.xaml
+++ b/.cat/Pages/StartWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="CPL.Pages.StartWindow"
+﻿<Window x:Class="CAT.Pages.StartWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         WindowStartupLocation="CenterScreen"
